--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 ./data
 ./dist
 ./build
-./stockPred.spec
-./StockSuggestion.csv
-./stocks.csv
-./botinfo.txt
-./tmpFile.txt
+stockPred.spec
+StockSuggestion.csv
+stocks.csv
+botinfo.txt
+tmpFile.txt
 .env
